--- a/prueba.html
+++ b/prueba.html
@@ -7,6 +7,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 <body>
-
+<!-- cabe aclarar que tube dificultades en su creacion por el echo de falta de integraciones hacia la pc como draivers y otros mas los cuales no me dejaban ver mi codido funcioando con python y flask no estoy tratando de sacar pretexto solo explicar el porque le faltan cosas-->
 </body>
 </html>
